# OpenWildlife-ml-model

./: .dockerignore  .gitignore  Dockerfile  _wsgi.py  docker-compose.yml  donwload_bert_nltk_weights.py  download_bert_nltk_weights.py  eider_duck_summary_1024.csv  eiderduck_summary_non_overlapping_patches.csv  log.txt  pyproject.toml  slice_coco.py  slice_img.py
cat_work_dir/: grounding_dino_swin-t_finetune_8xb4_20e_cat.py  grounding_dino_swin-t_finetune_8xb4_20e_penguins.py
compute_canada/submit/: create_env.sh  create_env_from_requirements.sh  finetune.sh  requirements.txt  slice.sh  submit_finetune.sh  submit_loop.sh  test.sh  test_loop.sh  train.sh
configs/DFO_whale_different_backbones/: all_experiments.json  plot.html
configs/_base_/datasets/: eider_ducks.py  eider_ducks_sliced_filtered.py
configs/eider_ducks/: eider_faster_rcnn_1024_convnext_T.py  mm_grounding_dino_circular_epoch10.py  mm_grounding_dino_clustered_epoch10.py  mm_grounding_dino_real_filtered_epoch10.py  mm_grounding_dino_sparse_epoch10.py  mm_grounding_dino_sparse_epoch20.py  vanilla_dino_sparse.py  vanilla_faster_rcnn_real_filtered.py  vanilla_faster_rcnn_sparse.py  vanilla_retinanet_sparse.py
configs/mm_grounding_dino/: grounding_dino_swin-t_pretrain_obj365.py
configs/mm_grounding_dino_animals/: grouding_dino_swin-t_caption.py  grouding_dino_swin-t_finetune_all.py  grouding_dino_swin-t_finetune_all_inference.py  grouding_dino_swin-t_finetune_birds.py  grouding_dino_swin-t_finetune_small_birds.py  grouding_dino_swin-t_finetune_small_birds_browse_dataset.py  grouding_dino_swin-t_no_caption.py  grouding_dino_swin-t_no_caption_new_split.py  grouding_dino_swin-t_no_caption_new_split_clip.py  grouding_dino_swin-t_no_caption_new_split_eikelboom_train.py  grouding_dino_swin-t_vis_caption.py  grouding_dino_swin-t_vis_caption_clip.py  grouding_dino_swin-t_viz_caption_new_split.py  grounding_dino_swin-t_finetune_8xb4_20e_penguins.py  test_captions.py  test_no_caption.py
configs/mm_grounding_dino_animals/finetune_configs/: DFO_whale_17.py  DFO_whale_23.py  SAVMAP.py  eider_duck_real_sparse_dense.py  eider_real_finetune.py  eider_syn_dense_finetune.py  eider_syn_finetune.py  eiderduck_finetune_syn_plus_real.py  palmyra_finetune.py  (+9 more)
demo/: inference_demo.py
docker/: Dockerfile
faster_coco_eval_repo/examples/: curve_example.ipynb
mmdet/apis/: det_inferencer.py
mmdet/datasets/: __init__.py  coco.py  coco_with_caption.py  odvg.py  odvg_caption.py
mmdet/utils/: slicing.py
mmdet/visualization/: local_visualizer.py  palette.py
projects/LabelStudio/: label_studio_guide.md  readme.md
sahi/: pyproject.toml  requirements.txt
sahi/sahi/: slicing.py
sahi/sahi/scripts/: merge_sliced_file.py
tools/: merge_coco_files.py  plot_p2_r2_chebyshev.py  slice_train_imgs.py  test.py  train.py
tools/active_learning/: convert_dfo_task_to_vip.ipynb
tools/analysis_tools/: boxplot_of_tp_fp_novel_categories.ipynb  boxplot_of_tp_fp_novel_categories.py  calculate_classwise_mae.py  calculate_mAP_pycocotools.py  calculate_tp_fp_fn.py  count_annotations_per_img.py  count_rmse.py  generate_csv_file.py  gt_no_confusion.json  merge_non_overlapping_slice_prediction.py  merge_non_overlapping_slice_prediction_claude.py  merge_non_overlapping_slices.py  optimised_pr_curve_plotting.py  plot_all_pr.py  plot_all_pr_all_parellel.py  plot_keypoints_Eiderducks.py  plot_pr.ipynb  plot_pr_curve.py  plot_results_from_json.py  plot_results_from_json_different_colour_category.py  plot_results_from_json_side_by_side.py  plot_results_from_json_side_by_side_copy.py  pred_no_confusion.json  split_into_nonoverlap_patches.py
tools/dataset_converters/: add_vis_caption.py  refcoco2odvg.py  remove_category.py  replace_in_vis_caption.py  swap_categories.py
(+253 files in other folders)
