[tool.poetry]
name = "mmwhale"
version = "1.0.0"
description = "MMDetection-based animal detection application"
authors = ["Muhammed Patel <m32patel@uwaterloo.ca>"]
license = "MIT"
homepage = "https://git.uwaterloo.ca/vip-whale-detection/labelstudio/mmwhale2"
readme = "README.md"
keywords = ["animal detection", "mmdetection", "deep learning", "mmdetection"]

packages = [
    { include = "mmdet"},
]


# [[tool.poetry.source]]
# name = "openmmlab"
# url  = "https://download.openmmlab.com/mmcv/dist/cu118/torch2.4/index.html"
# secondary = true

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
wandb = "^0.19.1"
opencv-python-headless = "^4.11.0.86"
numpy = "^1.26.4"
matplotlib = ">=3.9.2"
torch = "2.4.1"
torchvision = "*"
tqdm = "^4.67.1"
scikit-learn = "^1.6.1"
jupyterlab = "*"
ipywidgets = "*"
icecream = "*"
mmengine = ">=0.8.3"
albumentations = "^1.3"
rich = "*"
mmpretrain = "1.2.0"
fairscale = "*"
jsonlines = "*"
nltk = "^3.9.1"
pycocoevalcap = "1.2"
transformers = "^4.49.0"
sahi = { path = "sahi", develop = false }
# faster_coco_eval_repo = { path = "faster_coco_eval_repo", develop = false }
# mmcv = { version = "2.2.0", source = "openmmlab" }
label-studio-sdk = { path = "../label-studio-sdk", develop = false }

[tool.poetry.dev-dependencies]
# (leave empty or add test/formatting tools if you wish)

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"